chat timestamp is sent from server; fixed graphic bug in chat: now user is always visible even if not scrolling;

--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,10 @@ div.chat-body, #chat-bottom > form{
   background-color: var(--colour-bck-base);
 }
 
+main > div.chat-body:nth-child(2){
+  overflow-y: scroll;
+}
+
 div.chat-body > div.row > div{
   background-color: orange;
   width: fit-content;
